Remove unused imports and variables

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,9 @@
 {
   "name": "front-end",
+  "engines": {
+    "npm": "8.19.4",
+    "node": "16.20.0"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
