--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "path": "^0.12.7",
     "pg": "^8.11.1"
   },
   "devDependencies": {
